--- a/src/app/screens/info/info.component.html
+++ b/src/app/screens/info/info.component.html
@@ -2,3 +2,4 @@
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum provident laboriosam enim eveniet at consectetur officia aperiam! Voluptatum modi error voluptatem ut nemo officiis nostrum corporis repellat aperiam neque? Excepturi?</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit recusandae illo inventore vero tempore eum, veniam neque sunt eveniet natus, perferendis animi ipsam accusamus qui! Molestiae voluptatibus cum ducimus soluta?</p>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet voluptas pariatur consequatur accusamus incidunt repellendus mollitia quia inventore consequuntur? Hic blanditiis animi ipsa doloremque esse excepturi sint cupiditate nesciunt libero.</p>
